...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".registration.RegistrationPage">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="45dp"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:nextFocusDown="@+id/lastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9"
            android:autofillHints="personGivenName" />

...
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:nextFocusDown="@+id/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstName"
            app:layout_constraintWidth_percent="0.9"
            android:autofillHints="personFamilyName" />

...
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:autofillHints="postalAddress"
            android:hint="@string/address"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress"
            android:nextFocusDown="@+id/birthYear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastName"
            app:layout_constraintWidth_percent="0.9" />

        <EditText
...
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:autofillHints="birthDateYear"
            android:hint="@string/year"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:nextFocusDown="@+id/birthMonth"
            app:layout_constraintEnd_toStartOf="@+id/birthMonth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address"
            app:layout_constraintWidth_percent="0.4" />

        <EditText
...
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="0dp"
            android:hint="@string/month"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:nextFocusDown="@+id/birthDay"
            app:layout_constraintEnd_toStartOf="@+id/birthDay"
            app:layout_constraintStart_toEndOf="@+id/birthYear"
            app:layout_constraintTop_toBottomOf="@id/address"
            app:layout_constraintWidth_percent="0.2"
            android:autofillHints="birthDateMonth" />

...
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/day"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:nextFocusDown="@+id/emailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/birthMonth"
            app:layout_constraintTop_toBottomOf="@id/address"
            app:layout_constraintWidth_percent="0.2"
            android:autofillHints="birthDateDay" />

...
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthYear"
            app:layout_constraintWidth_percent="0.9" />

        <TextView
...
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/confirmPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordCriteria"
            app:layout_constraintWidth_percent="0.9"
            android:autofillHints="password" />

...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintWidth_percent="0.9"
            android:autofillHints="password" />

        <TextView
            android:id="@+id/registrationStatus"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmPassword"
            app:layout_constraintWidth_percent="0.9" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="289dp"
            android:layout_height="48dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="30dp"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
...
