<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title">I am title</string>
    <string name="subheading">I am a sub heading</string>
    <string name="filter">Filter</string>
    <string name="detailsArrow">See Details</string>
</resources>