...
    <string name="app_name">Quick Cash</string>
    <string name="worker">Worker</string>
    <string name="employer">Employer</string>
    <string name="confirm">Confirm</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="MOCK_DATABASE">MOCK_DATABASE</string>
    <string name="MOCK_LOCATION">MOCK_LOCATION</string>
    <string name="MOCK_GEOCODER">MOCK_GEOCODER</string>
    <string name="MOCK_PAYMENT">MOCK_PAYMENT</string>
    <string name="empty" />
    <string name="address">Address</string>
    <string name="addJob">Add Job</string>
...
